--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
    "displayName": "Keyboard Cursors and Selections",
    "description": "It enables you to create cursors and selections with the keyboard.",
    "version": "1.0.0",
+   "publisher": "srares13",
    "repository": {
       "type": "git",
       "url": "https://github.com/srares13/keyboard-cursors-and-selections.git"
    },
+   "icon": "./images/KCS-icon.png",
    "engines": {
       "vscode": "^1.77.0"
    },
