--- a/package.json
+++ b/package.json
@@ -59,12 +59,10 @@
    },
    "scripts": {
       "lint": "eslint .",
-      "pretest": "npm run lint",
-      "test": "node ./test/runTest.js"
+      "pretest": "npm run lint"
    },
    "devDependencies": {
-      "@vscode/test-electron": "^2.3.0",
-      "eslint": "^8.36.0",
+      "eslint": "~8.36.0",
       "prettier": "~2.8.8"
    }
 }
