Desktop extension host does not run

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
       "custom"
    ],
    "activationEvents": [],
-   "browser": "./bundle/extension.js",
+   "main": "extension.js",
    "contributes": {
       "commands": [
          {
