Once selections are activated and then discarded, the one that remains should be the first one added

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
       "custom"
    ],
    "activationEvents": [],
-   "main": "./bundle/extension.js",
+   "main": "extension.js",
    "contributes": {
       "commands": [
          {
