Made the extension host window to start from ./bundle/extension.js and enabled source map

--- a/package.json
+++ b/package.json
@@ -64,7 +64,8 @@
    "scripts": {
       "lint": "eslint .",
       "pretest": "npm run lint",
-      "vscode:prepublish": "node ./esbuild.js"
+      "vscode:prepublish": "node ./esbuild.js",
+      "bundle": "node ./esbuild.js"
    },
    "devDependencies": {
       "esbuild": "~0.18.17",
