--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,12 @@
 			"request": "launch",
 			"args": [
 				"--extensionDevelopmentPath=${workspaceFolder}"
-			]
+			],
+			"outFiles": [
+				"${workspaceFolder}/bundle/extension.js"
+			],
+			"preLaunchTask": "bundle-extension",
+			"sourceMaps": true
 		},
 		{
 			"name": "Extension Tests",
