--- a/package.json
+++ b/package.json
@@ -71,5 +71,8 @@
       "esbuild": "~0.18.17",
       "eslint": "~8.36.0",
       "prettier": "~2.8.8"
+   },
+   "dependencies": {
+      "semver": "~7.5.4"
    }
 }
