--- a/package.json
+++ b/package.json
@@ -41,6 +41,10 @@
          {
             "command": "kcs.showReleaseNotes",
             "title": "KCS: Show Release Notes"
+         },
+         {
+            "command": "kcs.placeLastInactiveSelections",
+            "title": "KCS: Place Last Inactive Selections"
          }
       ],
       "keybindings": [
@@ -58,8 +62,24 @@
             "command": "kcs.removeInactiveSelections",
             "key": "escape",
             "when": "editorTextFocus && inactiveSelections && !findWidgetVisible && !suggestWidgetVisible && !suggestWidgetMultipleSuggestions && !renameInputVisible && !referenceSearchVisible && !inReferenceSearchEditor && !quickFixWidgetVisible && !parameterHintsVisible && !parameterHintsMultipleSignatures && !editorHasSelection && !editorHasMultipleSelections && !notificationCenterVisible && !notificationToastsVisible"
+         },
+         {
+            "command": "kcs.placeLastInactiveSelections",
+            "key": "alt+shift+z",
+            "when": "editorTextFocus"
          }
-      ]
+      ],
+      "configuration": {
+         "type": "object",
+         "title": "KCS",
+         "properties": {
+            "kcs.selectionsReactToDocumentEdits": {
+               "type": "boolean",
+               "default": false,
+               "description": "Selections will change positions and dimensions according to document edits."
+            }
+         }
+      }
    },
    "scripts": {
       "lint": "eslint .",
@@ -74,6 +94,6 @@
    },
    "dependencies": {
       "semver": "~7.5.4",
-      "vscode-range-tracking": "file:../../NPM Packages/vscode-range-tracking/vscode-range-tracking-0.1.0.tgz"
+      "vscode-position-tracking": "file:../../NPM Packages/vscode-position-tracking/vscode-position-tracking-0.1.0.tgz"
    }
 }
