--- a/package.json
+++ b/package.json
@@ -83,8 +83,10 @@
    },
    "devDependencies": {
       "esbuild": "~0.18.17",
-      "eslint": "~8.36.0",
-      "prettier": "~2.8.8"
+      "eslint": "~8.48.0",
+      "eslint-config-prettier": "~9.0.0",
+      "eslint-plugin-prettier": "~5.0.0",
+      "prettier": "~3.0.3"
    },
    "dependencies": {
       "semver": "~7.5.4",
