--- a/package.json
+++ b/package.json
@@ -41,10 +41,6 @@
          {
             "command": "kcs.showReleaseNotes",
             "title": "KCS: Show Release Notes"
-         },
-         {
-            "command": "kcs.placeLastInactiveSelections",
-            "title": "KCS: Place Last Inactive Selections"
          }
       ],
       "keybindings": [
@@ -62,24 +58,8 @@
             "command": "kcs.removeInactiveSelections",
             "key": "escape",
             "when": "editorTextFocus && inactiveSelections && !findWidgetVisible && !suggestWidgetVisible && !suggestWidgetMultipleSuggestions && !renameInputVisible && !referenceSearchVisible && !inReferenceSearchEditor && !quickFixWidgetVisible && !parameterHintsVisible && !parameterHintsMultipleSignatures && !editorHasSelection && !editorHasMultipleSelections && !notificationCenterVisible && !notificationToastsVisible"
-         },
-         {
-            "command": "kcs.placeLastInactiveSelections",
-            "key": "alt+shift+z",
-            "when": "editorTextFocus"
          }
-      ],
-      "configuration": {
-         "type": "object",
-         "title": "KCS",
-         "properties": {
-            "kcs.selectionsReactToDocumentEdits": {
-               "type": "boolean",
-               "default": false,
-               "description": "Experimental: Selections will change positions and dimensions according to document edits."
-            }
-         }
-      }
+      ]
    },
    "scripts": {
       "lint": "eslint .",
@@ -93,7 +73,6 @@
       "prettier": "~2.8.8"
    },
    "dependencies": {
-      "semver": "~7.5.4",
-      "vscode-position-tracking": "~0.1.0"
+      "semver": "~7.5.4"
    }
 }
