--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,7 @@
 		/* Modules */
 		"module": "commonjs", /* Specify what module code is generated. */
 		// "rootDir": "./",                                  /* Specify the root folder within your source files. */
-		// "moduleResolution": "node10",                     /* Specify how TypeScript looks up a file from a given module specifier. */
+		"moduleResolution": "node", /* Specify how TypeScript looks up a file from a given module specifier. */
 		// "baseUrl": "./",                                  /* Specify the base directory to resolve non-relative module names. */
 		// "paths": {},                                      /* Specify a set of entries that re-map imports to additional lookup locations. */
 		// "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
@@ -76,7 +76,7 @@
 		"forceConsistentCasingInFileNames": true, /* Ensure that casing is correct in imports. */
 		/* Type Checking */
 		"strict": false, /* Enable all strict type-checking options. */
-		// "noImplicitAny": true,                            /* Enable error reporting for expressions and declarations with an implied 'any' type. */
+		"noImplicitAny": false, /* Enable error reporting for expressions and declarations with an implied 'any' type. */
 		// "strictNullChecks": true,                         /* When type checking, take into account 'null' and 'undefined'. */
 		// "strictFunctionTypes": true,                      /* When assigning functions, check to ensure parameters and the return values are subtype-compatible. */
 		// "strictBindCallApply": true,                      /* Check that the arguments for 'bind', 'call', and 'apply' methods match the original function. */
