new handling of showing important changes notes

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,7 +16,10 @@
 				"${workspaceFolder}/bundle/extension.js"
 			], // to know where the debugger would find the file that it needs to run
 			"preLaunchTask": "bundle-extension",
-			"sourceMaps": true
+			"sourceMaps": true,
+			"env": {
+				"WORKSPACE_PATH": "${workspaceFolder}"
+			}
 		},
 		{
 			"name": "Run unbundled",
