--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
             "title": "KCS: Remove Inactive Selections"
          },
          {
-            "command": "kcs.showReleaseNotes",
-            "title": "KCS: Show Release Notes"
+            "command": "kcs.showImportantChanges",
+            "title": "KCS: Show Important Changes"
          },
          {
             "command": "kcs.undo",
