--- a/package.json
+++ b/package.json
@@ -100,5 +100,14 @@
       "marked": "^9.0.3",
       "semver": "~7.5.4",
       "vscode-position-tracking": "~0.1.0"
-   }
+   },
+   "files": [
+      "bundle/extension.js",
+      "images",
+      "CHANGELOG.md",
+      "README.md",
+      "package.json",
+      "LICENSE.txt",
+      "IMPORTANT_CHANGES.md"
+   ]
 }
