--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
    "name": "kcs",
    "displayName": "Keyboard Cursors and Selections",
-   "description": "It enables you to create arbitrary cursors and selections with the keyboard.",
+   "description": "Create arbitrary cursors and selections with the keyboard.",
    "version": "1.4.0",
    "publisher": "srares13",
    "repository": {
